@@ -5,7 +5,8 @@ New since 1.9.6:
 
 * threading support
 * cups.Dest type
-* cups.Connection.setPrinterOptionDefault() [experimental]
+* cups.Connection.addPrinterOptionDefault()
+* cups.Connection.deletePrinterOptionDefault()
 * cups.Connection.getDests()
 
 New since 1.9.5:
