@@ -2,6 +2,7 @@
 
 	* cupsconnection.c (Connection_getPrinterAttributes): Fetch all of
 	the printer attributes, not just a named selection.
+	(Connection_deletePrinterOptionDefault): Implemented.
 
 2006-04-14  Tim Waugh  <twaugh@redhat.com>
 
